syntax = "proto3";

option csharp_namespace = "LogExpert.Grpc";

package logexpert;

// The log service definition.
service LogExpertService {
  // Sends a log message
  rpc SendLog (LogRequest) returns (LogReply) {}
  rpc LoadFiles (FileNames);
  rpc NewWindow (FileNames);
  rpc NewWindowOrLockedWindow (FileNames);
  rpc WindowClosed();
  rpc GetLogWindowCount() returns (Count);
}

message FileNames 
{
	repeated string FileNames = 4;
}

message Count
{
	int32 count = 0;
}

message FilesReply
{
	bool success = false;
}

// The request message containing the log message.
message LogRequest 
{
  string message = 1;
}

message LoadFiles(repeated )

// The response message containing the response.
message LogReply 
{
  string result = 1;
}